fix sidebar spacing

--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -20,20 +20,24 @@
   border: none;
   color: #343a40;
   font-size: 1.5rem;
-  padding: 10px;
+  padding: 10px 15px 5px 15px;
   position: fixed;
   top: 20px;
   left: 10px;
   z-index: 1000;
   cursor: pointer;
   display: none;
+  background-color: #f8f9fa;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .sidebar-header {
   font-size: 2rem;
+  line-height: 2.1rem;
+  padding:20px 0;
   font-weight: 700;
   color: #1E0D31;
-  margin-bottom: 20px;
 }
 
 .sidebar-item {
@@ -54,17 +58,16 @@
   background-color: #FFCF77;
   color: #1E0D31;
 }
-
 .figma-button {
   display: flex;
   align-items: center;
   text-decoration: none;
   color: #343a40;
-  font-size: 1rem;
-  padding: 16px;
+  font-size: 0.9rem;
+  padding: 10px;
   border-radius: 12px;
   background: white;
-  border: 2px solid transparent;
+  border: 3px solid transparent;
   background-clip: padding-box;
   background-image: linear-gradient(white, white), linear-gradient(45deg, #FFCF77, pink, purple);
   background-origin: border-box;
@@ -72,7 +75,8 @@
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   margin-top: auto; /* Push the button to the bottom */
   overflow: hidden;
-  transition: box-shadow 0.3s ease;
+  position: relative;
+  transition: border 0.4s ease, box-shadow 0.4s ease;
 }
 
 .figma-button svg {
@@ -80,9 +84,30 @@
   font-size: 24px;
 }
 
+.figma-button::before {
+  content: '';
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  right: -2px;
+  bottom: -2px;
+  background: linear-gradient(45deg, #FFCF77, pink, purple);
+  z-index: -1;
+  filter: blur(6px);
+  opacity: 0;
+  transition: opacity 0.4s ease;
+  border-radius: 12px;
+}
+
+.figma-button:hover::before {
+  opacity: 1;
+}
+
 .figma-button:hover {
   box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
+  border-width: 6px;
 }
+
 
 .version {
   margin-top: 20px;
@@ -112,7 +137,7 @@
 
   .sidebar-header {
     font-size: 1.5rem;
-    text-align: center;
-    margin-left:20px;
+    line-height: 1.5rem;
+    margin: 70px 0 20px 10px;
   }
 }
